tests/data/rewrite-target/rewrite-regex.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite-regex-ingress
  annotations:
    nginx.org/rewrite-target: "/api/$1/$2"
    nginx.org/path-regex: "case_sensitive"
spec:
  ingressClassName: nginx
  rules:
  - host: rewrite.example.com
    http:
      paths:
      - path: /v1/([^/]+)/([^/]+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
